2003-05-19  Jeffrey Stedfast  <fejj@ximian.com>

	* docs/reference/*: Updated some.

	* gmime/gmime-multipart-signed.c: Same as below.

	* gmime/gmime-multipart-encrypted.c: Fixed the prototypes for
	write_to_stream().

	* gmime/gmime-gpg-context.c (gpg_ctx_new): Initialise seen_eof1 to
	TRUE.
	(gpg_ctx_set_ostream): Set seen_eof1 to FALSE here, this way we
	only ever check for EOF for gpg's stdout if we care about the data
	received from it.
	(gpg_ctx_parse_status): Remove the hack that set seen_eof1 to TRUE
	when we received a TRUST status from gpg when verifying a
	signature. Same for when importing signatures.
	(gpg_ctx_op_step): Only FD_SET() fd's that we have not finished
	reading from.
	(gpg_ctx_op_exited): #if 0'd for now since we aren't using it
	anymore. Keeping it around for historical reasons and in case we
	find we really do need it back.

2003-04-15  Jeffrey Stedfast  <fejj@ximian.com>

	* README: Bumped version to 2.0.6

	* configure.in: Bumped version to 2.0.6

2003-04-15  Jeffrey Stedfast  <fejj@ximian.com>

	* configure.in: Check for netdb.h, gethostname and gethostbyname.

	* gmime/gmime-utils.c (g_mime_utils_generate_message_id): Guard
	against systems without netdb.h, gethostname() and/or
	gethostbyname(). Seems MingW does not have these things.

	* gmime/gmime-gpg-context.c (gpg_ctx_get_diagnostics): Flush the
	diagnostics stream and append a nul-byte. This allows us to return
	a const char * which will allow us to avoid strdup/free later.
	(gpg_ctx_free): Unref the diagnostics stream.
	(gpg_ctx_new): Get the locale charset and setup a charset filter
	for the diagnostics stream (use a stream instead of a GByteArray
	like we did before so we can do charset conversion more easily).
	(gpg_ctx_op_step): Use g_mime_stream_write() to append data to the
	diagnostics buffer instead of g_byte_array_append() - this way we
	get some charset filtering action. When reporting errors, use
	gpg_ctx_get_diagnostics(). Also make the errors reported to the